--- a/.github/workflows/luis_ci.yaml
+++ b/.github/workflows/luis_ci.yaml
@@ -1,5 +1,6 @@
 name: LUIS-CI
 
+# Test
 # Trigger the workflow on push or pull request, but only for the master branch, and only for changes to lu or json files
 on:
   push:
